# diablo_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
DIABLO/: model.config  model.sdf
config/: diablo_control.yaml
launch/: gazebo (copy).launch  gazebo.launch
src/: low_level_controller.cpp  motor_controller.cpp
urdf/: diablo_simulation.gazebo  diablo_simulation.trans  diablo_simulation.urdf  diablo_simulation.xacro
worlds/: diablo.world
